@@ -6411,6 +6411,9 @@ $\F_2[X]/(T)$. Assumes \kbd{T} irreducible in $\F_2[X]$.
 \fun{GEN}{F2xqX_factor}{GEN f, GEN T} return the factorization of \kbd{f} over
 $\F_2[X]/(T)$. Assumes \kbd{T} irreducible in $\F_2[X]$.
 
+\fun{GEN}{F2xqX_factor_squarefree}{GEN f, GEN T} as
+\kbd{FlxqX\_factor\_squarefree}.
+
 \subsec{\kbd{F2xqXQ}}. See \kbd{FlxqXQ} operations.
 
 \fun{GEN}{FlxqXQ_inv}{GEN x, GEN S, GEN T}
